create endpoint to update many trial users at once to avoid rate limit
